# miniFEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  minifem.h
benchmarks/: benchmarks.cpp  dummybench2.cpp
benchmarks/input/: C_section-10x1x1-10el.inp  bar-100x1x1-2el.inp  bar-100x1x1-4el.inp  bar-10x1x1-2el.inp  bar-10x1x1-4el.inp  bar-10x1x1-8el.inp  bar-4x1x1-2el.inp  bar-4x1x1-4el.inp  bar-4x1x1-8el.inp  patchC3D20R.inp
cmake/: DownloadProject.cmake
tests/: components.cpp  fem.cpp  testdummy.cpp  testotherdummy.cpp
tests/dummy/: dummy.cpp
